# jsonfromschema

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README  README.dev  __main__.py  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  tox.ini
jsonfromschema/: cli.py  lib.py
tests/: schema.json  test_main.py  test_schema_main.json  test_schema_main.json.maximum.results.json  test_schema_main.json.results.json  test_subschema.json
