[metadata]
name = jsonfromschema
url = https://github.com/NIC-MichalLabedzki/jsonfromschema
description = An implementation of JSON data generator from JSON Schema for Python
long_description = file: README
author = Michał Łabędzki
author_email = michal.tomasz.labedzki@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Free Public License 1.0.0
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires = setuptools_scm
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    jsonfromschema = jsonfromschema.cli:main

[wheel]
universal = 1